--- a/src/King.MVC/Views/User/Index.cshtml
+++ b/src/King.MVC/Views/User/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="row">
+﻿@section styles{
+    <link href="~/lib/select2/dist/css/select2.min.css" rel="stylesheet" />
+}
+<div class="row">
     <div class="col-md-3">
         <div class="box box-primary">
             <div class="box-header with-border">
@@ -36,5 +39,6 @@
     </div>
 </div>
 @section scripts{
+    <script type="text/javascript" src="~/lib/select2/dist/js/select2.min.js"></script>
     <script src="~/Views/User/Index.js?ts=@DateTime.Now.Ticks"></script>
 }
