--- a/src/King.MVC/Views/Shared/_Layout.cshtml
+++ b/src/King.MVC/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/skins/skin-blue.css">
     <link rel="stylesheet" href="~/lib/jstree/dist/themes/default/style.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-table/dist/bootstrap-table.css" />
+    @RenderSection("styles", false)
 </head>
 <body class="hold-transition skin-blue sidebar-mini fixed">
     <div class="wrapper">
