--- a/src/King.MVC/Views/Shared/_Layout.cshtml
+++ b/src/King.MVC/Views/Shared/_Layout.cshtml
@@ -265,7 +265,7 @@
                                         <a href="#" class="btn btn-default btn-flat">Profile</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                        <a href="#" id="btnSignOut" class="btn btn-default btn-flat">Sign out</a>
                                     </div>
                                 </li>
                             </ul>
@@ -501,6 +501,7 @@
     <script src="~/lib/layer/build/layer.js"></script>
     <script src="~/lib/moment/moment.js"></script>
     <script src="~/lib/moment/locale/zh-cn.js"></script>
+    <script src="~/js/main.js"></script>
     @RenderSection("scripts", false)
 </body>
 </html>
