--- a/src/King.MVC/Views/Shared/_Layout.cshtml
+++ b/src/King.MVC/Views/Shared/_Layout.cshtml
@@ -21,14 +21,14 @@
             <section class="sidebar">
                 <!-- Sidebar user panel -->
                 @*<div class="user-panel">
-                    <div class="pull-left image">
-                        <img src="img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                    </div>
-                    <div class="pull-left info">
-                        <p>Alexander Pierce</p>
-                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                    </div>
-                </div>*@
+                        <div class="pull-left image">
+                            <img src="img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        </div>
+                        <div class="pull-left info">
+                            <p>Alexander Pierce</p>
+                            <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                        </div>
+                    </div>*@
                 <!-- search form -->
                 <form action="#" method="get" class="sidebar-form">
                     <div class="input-group">
@@ -239,7 +239,9 @@
     <script src="~/lib/layer/build/layer.js"></script>
     <script src="~/lib/moment/moment.js"></script>
     <script src="~/lib/moment/locale/zh-cn.js"></script>
+    <script src="~/lib/dot/doT.min.js"></script>
     <script src="~/js/main.js"></script>
+
     @RenderSection("scripts", false)
 </body>
 </html>
