增加系统设置功能

--- a/src/King.MVC/Views/WagesTemplate/Index.cshtml
+++ b/src/King.MVC/Views/WagesTemplate/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@section styles{
+@section styles{
     <link href="/Views/WagesTemplate/Index.css" rel="stylesheet" />
 }
 <div class="box box-primary" id="importbox">
