--- a/src/King.MVC/Views/_ViewImports.cshtml
+++ b/src/King.MVC/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using King.MVC.Models
+@using King.Domain.Entities
+@using King.Domain.WagesEnities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
