--- a/src/King.MVC/Views/FixedProduct/_Edit.cshtml
+++ b/src/King.MVC/Views/FixedProduct/_Edit.cshtml
@@ -35,6 +35,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label" for="IsHot">推荐级别</label>
+                        <div class="col-sm-10">                            
+                            <input class="form-control" id="IsHot" name="IsHot" type="number" placeholder="填写数字，数字越大推荐程度越高">
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label" for="DataState">状态</label>
                         <div class="col-sm-10">
                             <select class="form-control" id="DataState" name="DataState">
