--- a/src/King.MVC/Views/Login/Index.cshtml
+++ b/src/King.MVC/Views/Login/Index.cshtml
@@ -24,7 +24,7 @@
 <body class="hold-transition login-page" >
     <div class="login-box">
         <div class="login-logo">
-            <a href="../../index2.html"><b>Admin</b>LTE</a>
+            <a href="../../index2.html"><b>科诺</b> 员工平台</a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
