--- a/src/King.MVC/Views/Shared/_Layout.cshtml
+++ b/src/King.MVC/Views/Shared/_Layout.cshtml
@@ -55,9 +55,9 @@
         </div>
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
-                <b>Version</b> 2.3.8
+                <b>Version</b> 1.0.0.0
             </div>
-            <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
+            <strong>Copyright &copy; 2017-2020 <a href="http://kakayunmu.com">kakayunmu</a>.</strong> All rights
             reserved.
         </footer>
         <aside class="control-sidebar control-sidebar-dark">
@@ -227,14 +227,12 @@
         </aside>
         <div class="control-sidebar-bg"></div>
     </div>
-    <div>
-
-    </div>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/js/app.js"></script>
     <script src="~/lib/jstree/dist/jstree.js"></script>
     <script src="~/lib/bootstrap-table/dist/bootstrap-table.js"></script>
+    <script src="~/lib/bootstrap-table/dist/locale/bootstrap-table-zh-CN.min.js"></script>
     <script src="~/js/jquery.slimscroll.js"></script>
     <script src="~/lib/layer/build/layer.js"></script>
     <script src="~/lib/moment/moment.js"></script>
