--- a/src/King.MVC/Views/WagesRecord/Index.cshtml
+++ b/src/King.MVC/Views/WagesRecord/Index.cshtml
@@ -7,6 +7,28 @@
                 </div>
             </div>
             <div class="box-body">
+                @*<form class="form-horizontal">
+                    <div class="box-body">
+                        <div class="form-group">
+                            <label for="staffName" class="col-sm-2 control-label">姓名</label>
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" id="staffName" placeholder="输入姓名查询">
+                            </div>
+                            <label for="stime" class="col-sm-2 control-label">发放时间</label>
+                            <div class="col-sm-2">
+                                <input type="text" class="form-control" id="stime" placeholder="起始时间">
+                            </div>
+                            <div class="col-sm-2">
+                                <input type="text" class="form-control" id="etime" placeholder="结束时间">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                        <button type="button" id="seachBtn" class="btn btn-info pull-right">查询</button>
+                    </div>
+                    <!-- /.box-footer -->
+                </form>*@
                 <div class="table-scrollable">
                     <table id="tb_data"></table>
                 </div>
